Complete Milestone 1: Foundation & Setup
- Milestone 1.1: Project initialization with monorepo structure
- Milestone 1.2: Docker environment with PostgreSQL and Redis
- Milestone 1.3: Next.js UI framework with Tailwind CSS and layout components

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,60 @@
-.github
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Testing
+coverage/
+*.log
+
+# Next.js
+.next/
+out/
+build/
+dist/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+.venv/
+ENV/
+env/
+*.egg-info/
+.pytest_cache/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Docker
+.docker/
+
+# Uploads and models
+uploads/
+models/
+*.pth
+*.pt
+*.onnx
+
+# Misc
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
