--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,31 +3,26 @@ uvicorn[standard]==0.27.0
 pydantic==2.5.3
 pydantic-settings==2.1.0
 python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
-sqlalchemy==2.0.25
-alembic==1.13.1
-psycopg2-binary==2.9.9
-redis==5.0.1
-celery==5.3.6
 aiofiles==23.2.1
 httpx==0.26.0
 
-# ML/AI
-torch==2.1.2
-transformers==4.37.2
-openai-whisper==20231117
-opencv-python==4.9.0.80
-librosa==0.10.1
-spacy==3.7.2
-numpy==1.26.3
-pandas==2.1.4
-scikit-learn==1.4.0
+# Text Processing
+PyPDF2==3.0.1
+python-docx==1.1.0
+nltk==3.8.1
+
+# ML/AI (updated versions compatible with Python 3.11+)
+torch>=2.0.0
+transformers>=4.30.0
+opencv-python-headless>=4.8.0
+librosa>=0.10.0
+numpy>=1.24.0
+pandas>=2.0.0
+scikit-learn>=1.3.0
 
 # Development
-pytest==7.4.4
-pytest-asyncio==0.23.3
-black==23.12.1
-flake8==7.0.0
-mypy==1.8.0
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+black>=23.0.0
+flake8>=6.0.0
